# pycon-colombia-2024

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
data/unstructured/imgs_embeddings/: data.pt
notebooks/: audio.ipynb  computer_vision.ipynb  nlp.ipynb  utils.py
notebooks/utils/: audio.py  computer_vision.py
qdrant_storage/: raft_state.json
src/: Dockerfile  docker-compose.yml  requirements.txt
src/chatbot_app/: Dockerfile  Dockerfile_front  app.py  st_app_test.py  utils.py
src/chatbot_app/app/: _templates.py  app.py  utils.py
src/chatbot_app/app/routers/: chatbot.py
src/chatbot_app/app/services/: _templates.py  chatbot.py  utils.py
src/chatbot_app/frontend/: requirements.txt  streamlit_app.py
src/chatbot_app/routers/: chatbot.py
src/chatbot_app/schemas/: query.py  responses.py
src/chatbot_app/services/: _templates.py  chatbot.py  utils.py
src/products_app/: app.py  utils.py
src/scripts/: train_clothes_classifier.py
src/songs_app/: app.py  utils.py
