[tool.poetry]
name = "pycon-colombia-2024"
version = "0.1.0"
description = ""
authors = ["Jose Alcocer <jolual2747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
qdrant-client = "^1.8.2"
datasets = "^2.18.0"
pandas = "^2.2.2"
panns-inference = "^0.1.1"
kaggle = "^1.6.12"
ipykernel = "^6.29.4"
opencv-python = "^4.9.0.80"
facenet-pytorch = "^2.5.3"
mtcnn = "^0.1.1"
tensorflow = "^2.16.1"
scikit-image = "^0.23.2"
transformers = "^4.40.0"
streamlit = "^1.33.0"
pytube = "^15.0.0"
pydub = "^0.25.1"
bs4 = "^0.0.2"
openai = "^1.14.3"
langchain = "^0.1.13"
unstructured = "0.7.12"
pypdf = "^4.1.0"
tiktoken = "^0.6.0"
langchain-openai = "0.1.1"
chromadb = "0.4.17"
langchainhub = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
